MONITORING/sqelk100/templates/elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: sqeks.smartquail.io  # Reemplaza con tu dominio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-service
            port:
              number: 9200
  tls:
  - hosts:
    - sqeks.smartquail.io   # El dominio de tu Elasticsearch
    secretName: elasticsearch-tls  # El secreto TLS que creaste antes
